# ProjektTIN

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  tags.c
AcceptanceTests/: checkFiles.py  lua2.lua  readme
AcceptanceTests/ChatAPP/: chatAPP  chatAPP.pro  mainwindow.cpp  mainwindow.h  serial.h
ChatAPP/: Makefile  chatAPP.pro  debug.cpp  debug.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serial.h  ui_mainwindow.h
ClientAPP/: CMakeLists.txt
ClientAPP/include/: Client.h  Exceptions.h
ClientAPP/src/: Client.cpp  ClientAPP.cpp
GameAPP/: Game.pro  debug.h  main.cpp  res.qrc  util.cpp  util.h
GameAPP/Model/: card.cpp  card.h  game.cpp  game.h  model.pri  player.cpp  player.h
GameAPP/Tests/: Tests.pro  maintestrunner.cpp  tst_gametests.cpp  tst_gametests.h  tst_playertests.cpp  tst_playertests.h
GameAPP/View/: button.cpp  button.h  cardview.cpp  cardview.h  view.cpp  view.h  view.pri
ServerAPP/: CMakeLists.txt  Clients.hh  Game.hh  GameAbstraction.hh  Replay.hh  SimpleStatusObserver.hh  server.cc  util.hh
include/: fdebug.hh  tags.h
libnet/: CMakeLists.txt  client.c  common.c  common.h  server.c
libnet/include/: client.h  fdebug.h  server.h
libtlv/: CMakeLists.txt
libtlv/include/: Exceptions.h  Tlv.h  TlvObject.h
libtlv/src/: Tlv.cpp  TlvObject.cpp  TlvObjectTests.cpp  TlvTests.cpp
